tests/fixtures/invalid/pow_bytes_bool_str.py
# Cannot call pow() with Bytes, Bool, Str
x = pow(b"hello", True, "hello")
